# genetic_neural_network

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/html/: annotated.html  classes.html  dir_13f9b6545519e430cd97a67764df1451.html  dir_13f9b6545519e430cd97a67764df1451_dep.map  dir_13f9b6545519e430cd97a67764df1451_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_939cba13a87fce3accb75277d6a97579.html  dir_939cba13a87fce3accb75277d6a97579_dep.map  dir_939cba13a87fce3accb75277d6a97579_dep.md5  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17_dep.map  dir_b0856f6b0d80ccb263b2f415c91f9e17_dep.md5  dir_ec55f8842cf5a24aaa2892b0a7eb562a.html  dir_ec55f8842cf5a24aaa2892b0a7eb562a_dep.map  dir_ec55f8842cf5a24aaa2892b0a7eb562a_dep.md5  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  layer_8h.html  layer_8h__dep__incl.map  layer_8h__dep__incl.md5  layer_8h_source.html  net_8h.html  net_8h__incl.map  net_8h__incl.md5  net_8h_source.html  population_8h.html  population_8h_source.html  struct__threadpool.html  structga__population.html  structnn__layer.html  structnn__net.html  structnn__net__coll__graph.map  structnn__net__coll__graph.md5  structthreadpool__t.html  threadpool_8h.html  (+3 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_2.js  classes_3.js  files_2.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  searchdata.js  variables_0.js  (+8 more)
examples/: basic.c
(+8 files in other folders)
